--- a/image.html
+++ b/image.html
@@ -5,7 +5,7 @@
 		name="viewport"
 		content="viewport-fit=cover,height=device-height,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0"
 	 />
-	 <link rel="Shortcut Icon" type="image/x-icon" href="https://suetmo.github.io/ying/img/logo.png" />
+	 <link rel="Shortcut Icon" type="image/x-icon" href="https://bimage.github.io/view/img/logo.png" />
 	 <title>BImage</title>
 	<style>
 		body {
@@ -205,7 +205,7 @@
  
  function loadingFnc() {
 	document.getElementById('loading').style.visibility = "hidden";
-	document.getElementById('count').src = "https://suetmo.github.io/ying/count";
+	document.getElementById('count').src = "https://bimage.github.io/view/count";
 	setTimeout(success, 100);
 	
  }
